Don't change the HTTPS PasswordForm::action during HTTP -> HTTPS migration.

BUG=687266

Review-Url: https://codereview.chromium.org/2666043004
Cr-Commit-Position: refs/heads/master@{#447502}

Former-commit-id: aeb4ece778671ee806942e7fe4ba57431ebea692